appId: ${MAESTRO_APP_ID}
---
- tapOn: "ボタンを追加"
- tapOn: "グラフ\nタップして選択"
- extendedWaitUntil:
    visible: ".*${PIXELA_E2E_GRAPH_NAME}.*"
    timeout: 15000
- tapOn: ".*${PIXELA_E2E_GRAPH_NAME}.*"
- tapOn: "表示名"
- eraseText
- inputText:
    text: ${PIXELA_E2E_CARD_NAME}
    waitToSettleTimeoutMs: 1000
- tapOn: "固定値ボタンを追加"
- inputText:
    text: "1"
    waitToSettleTimeoutMs: 1000
- tapOn: "追加"
- tapOn: "保存"
- extendedWaitUntil:
    visible: ".*${PIXELA_E2E_CARD_NAME}.*"
    timeout: 15000
