appId: ${MAESTRO_APP_ID}
---
- launchApp:
    clearState: true
- tapOn: "username"
- inputText:
    text: ${PIXELA_E2E_USERNAME}
    waitToSettleTimeoutMs: 1000
- tapOn: "token"
- inputText:
    text: ${PIXELA_E2E_TOKEN}
    waitToSettleTimeoutMs: 1000
- tapOn: "はじめる"
- extendedWaitUntil:
    visible: "ボタンを追加"
    timeout: 15000
